# Common_Problems

./: .clang-format  .gitignore  CMakeLists.txt  README.md  readme.md
boards/: nrf5340dk_nrf5340_cpuapp.overlay
child_image/: cpunet.overlay
components/libraries/fifo/: app_fifo.c  app_fifo.h
components/toolchain/gcc/: Makefile.windows
cpuapp/include/: mt_central.h  mt_common.h  mt_peripheral.h
cpuapp/src/: mt_central.c
cpunet/: prj.conf
distance_test/: Kconfig  prj.conf
distance_test/cpuapp/: main.c
distance_test/cpuapp/include/: mt_central.h  mt_common.h  mt_peripheral.h
distance_test/cpuapp/src/: mt_peripheral.c
examples/ble_peripheral/ble_app_beacon/: main.c  mt_adc.c  mt_adc.h
examples/ble_peripheral/ble_app_beacon/pca10040/s132/config/: sdk_config.h
examples/ble_peripheral/ble_app_beacon/pca10040e/s112/config/: sdk_config.h
examples/peripheral/radio/receiver/: main.c
modules/nrfx/mdk/: system_nrf52.c
multi-core/: CMakeLists.txt
projects/usb_hid/: main.c
projects/usb_hid/pca10056/s140/armgcc/: Makefile
projects/usb_hid/pca10056/s140/config/: app_config.h  sdk_config.h
projects/usb_hid/user/user_apps/: mt_ble_adv.c  mt_ble_adv.h  mt_ble_cfg.c  mt_ble_cfg.h  mt_ble_service.c  mt_ble_service.h  mt_hid_config.h  mt_hid_keyboard.h  mt_hid_mouse.h  mt_logic.c  mt_logic.h
projects/usb_hid/user/user_drivers/: mt_mod_btn.c  mt_mod_btn.h  mt_module_pin.h  mt_serial.c  mt_serial.h  mt_sw_mutex.h
uart_hid/examples/ble_peripheral/ble_app_uart/: main.c
uart_hid/modules/nrfx/drivers/src/: nrfx_uarte.c
zephyr/: module.yml
(+27 files in other folders)
